<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.signInActivity.MainActivity">

    <TextView
        android:id="@+id/attendence_management_system"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:text="@string/attendance_management_system"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.257"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.112" />

    <EditText
        android:id="@+id/person_name"
        android:layout_width="275dp"
        android:layout_height="64dp"
        android:ems="10"
        android:hint="@string/enter_id"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.253"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/attendence_management_system"
        app:layout_constraintVertical_bias="0.091"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/person_password"
        android:layout_width="275dp"
        android:layout_height="64dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.253"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/person_name"
        app:layout_constraintVertical_bias="0.069"
        android:autofillHints="" />

    <Button
        android:id="@+id/person_sign_in"
        android:layout_width="194dp"
        android:layout_height="62dp"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.755"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.73" />

    <EditText
        android:id="@+id/person_role"
        android:layout_width="275dp"
        android:layout_height="64dp"
        android:hint="@string/admin_faculty_student"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.257"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/person_password"
        app:layout_constraintVertical_bias="0.103"
        android:importantForAutofill="no"
        tools:ignore="TextFields" />

</androidx.constraintlayout.widget.ConstraintLayout>