<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.admin_activities.modules.AddStudentActivity">

    <EditText
        android:id="@+id/student_name"
        android:layout_width="265dp"
        android:layout_height="66dp"
        android:ems="10"
        android:inputType="text"

        android:hint="@string/name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.431"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.142"
        android:autofillHints="" />

    <EditText
        android:id="@+id/student_password"
        android:layout_width="265dp"
        android:layout_height="66dp"
        android:ems="10"
        android:hint="@string/default_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.414"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/student_name"
        app:layout_constraintVertical_bias="0.073"
        android:autofillHints=""
        android:inputType="text"
        tools:ignore="TextFields" />

    <TextView
        android:id="@+id/date_of_join"
        android:layout_width="265dp"
        android:layout_height="66dp"
        android:ems="10"
        android:hint="@string/date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.406"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/student_password"
        app:layout_constraintVertical_bias="0.087" />

    <EditText
        android:id="@+id/degree"
        android:layout_width="265dp"
        android:layout_height="66dp"
        android:ems="10"
        android:hint="@string/degree"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_of_join"
        app:layout_constraintVertical_bias="0.102"
        android:autofillHints="" />

    <Button
        android:id="@+id/add_student"
        android:layout_width="162dp"
        android:layout_height="68dp"
        android:text="@string/add_student"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.662"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/degree"
        app:layout_constraintVertical_bias="0.219" />
</androidx.constraintlayout.widget.ConstraintLayout>